# Robot-Movement

./: CMakeLists.txt  direct.cpp  inverse.cpp  mockPublisher.cpp  p2pMotionPlan.cpp  package.xml  punto1.cpp  punto2.cpp  punto3.cpp  punto4.cpp  robot_movement_node.cpp  spawner_foto.py  spawner_punto1.py  spawner_punto2.py  spawner_punto3.py  spawner_same4.py  spawner_singolo.py  ur5.h
data/0/x/: x_0_0  x_0_0.393  x_0_0.785  x_0_1.178
data/0/y/: y_0_0  y_0_0.393  y_0_0.785  y_0_1.178
movement_include/: .pickPlaceLink.h.swp  direct.h  gripper.h  handlers.h  inverse.h  move.h  p2pMotionPlan.h  pick&place.h  pickPlaceLink.h  ur5.h
msg/: customMsg.msg
scripts/: automation.sh  prova.sh  ultimate.sh
spawners/: spawner_automation.py  spawner_foto.py  spawner_punto1.py  spawner_punto2.py  spawner_punto3.py  spawner_punto4.py  spawner_scam.py  spawner_singolo.py
